# afterflow

./: .gitignore  Cargo.toml  Dockerfile  LAMBDA.md  Makefile  README.md  RULES.md  SEMANTICS.md  SPEC.md  TODO.md  compile.sh  grammar.peg
code/examples/calc/: main.af
code/examples/callback_exit/: main.af  (+1 more)
compile-direct/: Cargo.toml
compile-direct/code/: main.af
compile-direct/src/: lib.rs  main.rs
compile-direct/tests/: golden_test.rs  source_import_test.rs
docs/: frontend.md  index.md  kit-lsp.md  kit-math.md  kit-runtime.md  lib-std-fmt.md  lib-std-math.md  lib-std.md
formatter/: Cargo.toml
formatter/src/: main.rs
frontend/: AGENTS.md  Cargo.toml  README.md
frontend/src/: ast.rs  builtins.rs  error.rs  format_hir.rs  formatter.rs  hir.rs  hir_ast.rs  hir_context.rs  lexer.rs  lexer_test.af  lexer_test.rs  lib.rs  parser.rs  parser_test.af  parser_test.rs  signature.rs  source.rs  span.rs  token.rs
kit/format/: Cargo.toml
kit/lsp/: AGENTS.md  Cargo.toml
kit/math/: AGENTS.md  Cargo.toml
kit/runtime/: AGENTS.md  Cargo.toml
language-server/: AGENTS.md  Cargo.toml  README.md
language-server/src/: analysis.rs  document.rs  lib.rs  main.rs  server.rs
language-server/tests/: lifecycle.rs
lib/std/: AGENTS.md  README.md  end.af  pipe.af  print.af
src/: lib.rs
src/compiler/: air.rs  air_ast.rs  ast.rs  builtins.rs  codegen.rs  codegen_curry_test.expected.asm  codegen_curry_test.rgo  codegen_test.rgo  codegen_test.rs  error.rs  format_air.rs  format_hir.rs  hir.rs  hir_ast.rs  hir_context.rs  lexer.rs  lexer_test.af  lexer_test.rgo  lexer_test.rs  mod.rs  parser.rs  parser_test.af  parser_test.rgo  runtime.rs  signature.rs  source.rs  symbol.rs  token.rs
src/debug_tools/: test_helpers.rs
src/tools/: render_hir.rs
tests/: golden_test.rs  source_import_test.rs
(+396 files in other folders)
