[workspace]
members = [
    "frontend",
    "compile-direct",
    "kit/format",
    "kit/math",
    "kit/runtime",
]
default-members = [
    "frontend",
    "compile-direct",
    "kit/format",
    "kit/math",
    "kit/runtime",
]
resolver = "2"

[profile.dev]
debug = true

[profile.test]
debug = true

[profile.release]
panic = "abort"
