[workspace]
members = [
    "frontend",
    "compile-direct",
    "kit/format",
    "kit/lsp",
    "kit/math",
    "kit/runtime",
    "language-server",
]
default-members = [
    "frontend",
    "compile-direct",
    "kit/format",
    "kit/lsp",
    "kit/math",
    "kit/runtime",
    "language-server",
]
resolver = "2"

[profile.dev]
debug = true

[profile.test]
debug = true

[profile.release]
panic = "abort"
