[workspace]
members = [
    "frontend",
    "compile-direct",
    "formatter",
    "kit/format",
    "kit/lsp",
    "kit/math",
    "kit/runtime",
    "language-server",
]
default-members = [
    "frontend",
    "compile-direct",
    "formatter",
    "kit/format",
    "kit/lsp",
    "kit/math",
    "kit/runtime",
    "language-server",
]
resolver = "2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"

[profile.dev]
debug = true

[profile.test]
debug = true

[profile.release]
panic = "abort"
